<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.roma.inmobiliariapro.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.roma.inmobiliariapro.ui.inmuebles.InmuebleFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmueble">
        <action
            android:id="@+id/action_nav_inmuebles_to_inmuebleDetalleFragment"
            app:destination="@+id/inmuebleDetalleFragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_inmuebleCreateFragment"
            app:destination="@id/inmuebleCreateFragment" />
    </fragment>

    <fragment
        android:id="@+id/inmuebleDetalleFragment"
        android:name="com.roma.inmobiliariapro.ui.inmuebles.InmuebleDetalleFragment"
        android:label="Detalle Inmueble"
        tools:layout="@layout/fragment_inmueble_detalle">
        <argument
            android:name="inmueble"
            app:argType="com.roma.inmobiliariapro.data.model.response.Inmueble" />
        <action
            android:id="@+id/action_inmuebleDetalleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.roma.inmobiliariapro.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.roma.inmobiliariapro.ui.contratos.ContratoFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contrato" >
        <action
            android:id="@+id/action_nav_contratos_to_contratoDetalleFragment"
            app:destination="@id/contratoDetalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/inmuebleCreateFragment"
        android:name="com.roma.inmobiliariapro.ui.inmuebles.InmuebleCreateFragment"
        android:label="Crear Inmueble"
        tools:layout="@layout/fragment_inmueble_create">
        <action
            android:id="@+id/action_inmuebleCreateFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/contratoDetalleFragment"
        android:name="com.roma.inmobiliariapro.ui.contratos.ContratoDetalleFragment"
        android:label="Detalle Contrato"
        tools:layout="@layout/fragment_contrato_detalle" >
        <action
            android:id="@+id/action_contratoDetalleFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_contratoDetalleFragment_to_pagoFragment"
            app:destination="@id/pagoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.roma.inmobiliariapro.ui.inquilinos.InquilinoFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilino" >
        <action
            android:id="@+id/action_nav_inquilinos_to_inquilinoDetalleFragment"
            app:destination="@id/inquilinoDetalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/inquilinoDetalleFragment"
        android:name="com.roma.inmobiliariapro.ui.inquilinos.InquilinoDetalleFragment"
        android:label="Detalle Inquilino"
        tools:layout="@layout/fragment_inquilino_detalle" >
        <action
            android:id="@+id/action_inquilinoDetalleFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/pagoFragment"
        android:name="com.roma.inmobiliariapro.ui.contratos.PagoFragment"
        android:label="Pagos"
        tools:layout="@layout/fragment_pago">
        <action
            android:id="@+id/action_pagoFragment_to_contratoDetalleFragment"
            app:destination="@id/contratoDetalleFragment" />
    </fragment>

</navigation>